--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,11 @@
     	<artifactId>protobuf-java-format</artifactId>
     	<version>1.2</version>
 	</dependency>
+	<dependency>
+		<groupId>com.googlecode.json-simple</groupId>
+		<artifactId>json-simple</artifactId>
+		<version>1.1.1</version>
+	</dependency>
   </dependencies>
   <build>
 		<plugins>
