--- a/debian/control
+++ b/debian/control
@@ -1,5 +1,5 @@
 Source: hsn2-unicorn
-Section: unknown
+Section: java
 Priority: optional
 Maintainer: CERT Polska <info@cert.pl>
 Build-Depends: debhelper (>= 8.0.0), maven
@@ -8,4 +8,5 @@ Standards-Version: 3.9.3
 Package: hsn2-unicorn
 Architecture: all
 Depends: ${misc:Depends}, openjdk-7-jre
+Homepage: http://www.honeyspider.net
 Description: HSN2 Object Store query tool
