Changing descriptions/name

--- a/debian/control
+++ b/debian/control
@@ -9,4 +9,6 @@ Package: hsn2-unicorn
 Architecture: all
 Depends: ${misc:Depends}, openjdk-7-jre
 Homepage: http://www.honeyspider.net
-Description: HSN2 Object Store query tool
+Description: HSN2 command console
+ A command line tool for managing the HSN2 job pool and for retrieving
+job status information.
